GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/Customer_Feed_Name__c.object-meta.xml
<CustomObject>
    <label>Customer Feed Name</label>
    <nameField>
        <label>Csutomer Feed Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Feed Name</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>