GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Feed Name</relationshipLabel>
    <relationshipName>Customer_Feed_Name</relationshipName>
    <type>Lookup</type>
</CustomField>