GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <formula>Block__r.Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing #</label>
    <type>Text</type>
</CustomField>