GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Customer Feed Name</relationshipLabel>
    <relationshipName>Customer_Feed_Name</relationshipName>
    <type>Lookup</type>
</CustomField>