GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/fields/Finance_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Customer_ID__c</fullName>
    <formula>Finance_Customerid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Customer ID</label>
    <type>Text</type>
</CustomField>