GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/fields/Finance_Customerid__c.field-meta.xml
<CustomField>
    <fullName>Finance_Customerid__c</fullName>
    <label>Finance Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>