GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/fields/OB_Customer_Feed__c.field-meta.xml
<CustomField>
    <fullName>OB_Customer_Feed__c</fullName>
    <label>OB Customer Feed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>