GloablServices/keshavglobal/force-app/main/default/objects/Customer_Feed_Name__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Account__c</columns>
    <columns>OB_Customer_Feed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>